# LogsAnalyzer

./: README.md  manage.py  pyproject.toml
docs/: Makefile  conf.py  index.rst  modules.rst
logproc/: __init__.py  __main__.py  api.py  metrics.py  parser.py  profiling.py  reader.py  reducer.py  worker.py
logproc_web/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
logproc_web/dashboard/: __init__.py  admin.py  apps.py  forms.py  job_runner.py  models.py  urls.py  views.py
logproc_web/dashboard/migrations/: 0001_initial.py  0002_processingrun_status_codes.py  0003_alter_processingrun_input_path.py
logproc_web/dashboard/static/dashboard/: styles.css
logproc_web/dashboard/templates/dashboard/: base.html  run_detail.html  run_form.html  run_list.html
scripts/: generate_logs.py
tests/: test_parser.py  test_processing.py
