[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logproc"
version = "0.1.0"
description = "Procesador de logs grandes en streaming y paralelo"
requires-python = ">=3.10"
dependencies = [
    "Django>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "sphinx>=7.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["logproc", "logproc.*", "logproc_web", "logproc_web.*"]

[tool.setuptools.package-data]
logproc_web = [
    "dashboard/templates/**/*.html",
    "dashboard/static/**/*.css",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
